# springbok-mgl

./: Cargo.toml
src/: bill_section.rs  law_section.rs  lib.rs  main.rs  malegislature.rs  markup.rs
tests/: integration_test.rs
tests/test-data/: H.4072.lower.txt  H.4072.txt  H.4220.txt  H.47.lower.txt  H.47.txt  HD.4607.txt  HD.4741.txt  S.2482.txt  SD.2897.txt
