[package]
name = "springbok-mgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
indexmap = "2.0.2"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.17.1"
url = "2.4.1"
